feat: implement refresh token

--- a/.env
+++ b/.env
@@ -5,5 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/bricks?schema=public"
-JWT_SECRET="mysecret"
-JWT_EXPIRATION_TIME="7d"
+ACCESS_TOKEN_EXPIRATION_TIME="1h"
+REFRESH_TOKEN_EXPIRATION_TIME="7d"
+ACCESS_TOKEN_JWT_KEY="mysecret"
+REFRESH_TOKEN_JWT_KEY="mysecret"
