feat: add redis for cache management

--- a/.env
+++ b/.env
@@ -9,3 +9,8 @@ ACCESS_TOKEN_EXPIRATION_TIME="1h"
 REFRESH_TOKEN_EXPIRATION_TIME="7d"
 ACCESS_TOKEN_JWT_KEY="mysecret"
 REFRESH_TOKEN_JWT_KEY="mysecret"
+
+REDIS_HOST="localhost"
+REDIS_PORT="6379"
+REDIS_PASSWORD=
+REDIS_USERNAME=
