--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.540.0",
+    "@aws-sdk/s3-request-presigner": "^3.540.0",
     "@liaoliaots/nestjs-redis": "^9.0.5",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.3.2",
     "@nestjs/swagger": "^7.3.0",
     "@prisma/client": "5.9.1",
     "@sendgrid/mail": "^8.1.1",
@@ -59,6 +61,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/mjml": "^4.7.4",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^2.0.12",
