feat: add forgot password flow

--- a/.env
+++ b/.env
@@ -14,3 +14,22 @@ REDIS_HOST="localhost"
 REDIS_PORT="6379"
 REDIS_PASSWORD=
 REDIS_USERNAME=
+
+SENDGRID_API_KEY="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"
+SENDGRID_SENDER=adarshaofficial@gmail.com
+S3_ENDPOINT=demo-bricks-bucket
+S3_ACCESS_KEY=AKIAXTXLDCQVVBFHVCFY
+S3_SECRET_ACCESS_KEY=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
+S3_REGION=ap-south-1
+S3_ENDPOINT=https://s3.ap-south-1.amazonaws.com
+S3_BUCKET_NAME=demo-bricks-bucket
+
+
+
+# these are used for email verification
+JWT_CONFIRMATION_TOKEN_SECRET=jwtconfirmationtokensecret123123
+JWT_CONFIRMATION_TOKEN_EXPIRATION_TIME="30m"
+
+
+# FE URL
+CLIENT_DOMAIN=http://localhost:3000
