--- a/.env.example
+++ b/.env.example
@@ -25,8 +25,12 @@ S3_REGION=
 S3_BUCKET_NAME=
 
 
-
+#Google 
+GOOGLE_OAUTH_CLIENT_ID=
+GOOGLE_OAUTH_CLIENT_SECRET=
+GOOGLE_OAUTH_CALLBACK_URL=http://localhost:9000/api/v1/auth/google/callback
 
 
 # FE URL
 CLIENT_DOMAIN=http://localhost:3000
+CLIENT_AUTH_REDIRECT_URL=http://localhost:3000/auth/profile
