--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mjml": "^4.15.3",
     "nestjs-pino": "^4.0.0",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pino-http": "^9.0.0",
@@ -66,6 +67,7 @@
     "@types/mjml": "^4.7.4",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
+    "@types/passport-google-oauth20": "^2.0.14",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
