feat: add github oauth

--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,17 @@ GOOGLE_OAUTH_CLIENT_SECRET=
 GOOGLE_OAUTH_CALLBACK_URL=http://localhost:9000/api/v1/auth/google/callback
 
 
+# GitHub OAuth implementation
+# https://docs.github.com/en/developers/apps/building-oauth-apps/authorizing-oauth-apps
+# -----------------------------------------------------
+GITHUB_OAUTH_CLIENT_ID=
+# The client secret you received from GitHub for your OAuth App
+GITHUB_OAUTH_CLIENT_SECRET=
+# The URL in your application where users are sent after authorization
+GITHUB_OAUTH_CALLBACK_URL=http://localhost:9000/api/v1/auth/github/callback
+
+
+
 # FE URL
 CLIENT_DOMAIN=http://localhost:3000
 CLIENT_AUTH_REDIRECT_URL=http://localhost:3000/auth/profile
