--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mjml": "^4.15.3",
     "nestjs-pino": "^4.0.0",
     "passport": "^0.7.0",
+    "passport-github": "^1.1.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -67,6 +68,7 @@
     "@types/mjml": "^4.7.4",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
+    "@types/passport-github": "^1.1.12",
     "@types/passport-google-oauth20": "^2.0.14",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^2.0.12",
