--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
+    "date-fns": "^3.6.0",
     "handlebars": "^4.7.8",
     "install": "^0.13.0",
     "ioredis": "^5.3.2",
