--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,22 @@
 services:
+  # bricks-api:
+  #   container_name: bricks-api
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #   restart: always
+  #   ports:
+  #     - '9000:9000'
+  #   environment:
+  #     - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/bricks?schema=public
+  #   env_file:
+  #     - .env
+  #   depends_on:
+  #     - postgres
+  #     - redis
+  #   networks:
+  #     - app-network
+
   postgres:
     container_name: postgres
     image: postgres:alpine
